# user_register_api

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  diesel.toml  docker-compose.yaml
migrations/2025-04-29-010753_users/: down.sql  up.sql
src/: main.rs  schema.rs
src/auth/: jwt.rs  mod.rs
src/database/: mod.rs  schema.rs  user_models.rs
src/repositories/: user_repo.rs
src/services/: auth_routes.rs  user_routes.rs
