[package]
name = "user_register_api"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
uuid = { version = "1", features = ["serde"] }
rocket = {version = "0.5", features = ["json"]}
bcrypt = "0.17"
jsonwebtoken = "9"
chrono = { version = "0.4.41", features = ["serde"] }